<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CanItfHelperHResult" Id="{bccbce10-9a9d-0a55-1486-5fed13f13134}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CanItfHelperHResult :
(
	NoError 						:= 0,  // values >= 0 implies no error and/or informational. values < 0 implies error. 
	NoError_11Bit					:= 1,
	NoError_29Bit					:= 2,
	NoError_29Bit_nTrans			:= 3,
	
	Error							:= -1, //Error, generic
	InvalidSetup 					:= -2, //pointers to ST_CanQueue are zero or sizeof ST_CanQueue doesn't equal 11bit or 29bit version.
	InvalidPointer					:= -3, //pointer parameter is zero.
	
	RxQueueHasUnreadMessages 		:= -100, // Rx Queue 'NoOfRxMessages' not equal RxMessagesAckedCnt, call either mGetRxMessages or mAckRxMessages.
	RxQueueEmpty 					:= -101, // Rx queue is empty, wait for more data.
	NoNewRxMessages 				:= -102, // Rx queue has not received new data yet.
	RxMessageInvalid				:= -103, // Rx Message returned is invalid, ignore result. Re-read Rx Messages.

	TxQueueFull 					:= -200, //NumOfMessages variable in Tx Queue is at or is greater then the allowed amount. Call aResetTxQueue and refill queue.
	TxQueueEmpty 					:= -201, // Tx queue 'NoOfTxMessages' value is zero, use mAddTxMessage to add messages.
	TxQueueInvalid					:= -202, //Tx Queue
	TxQueueIsBusy					:= -203 // Tx queue 'TxCounter' and Rx queue 'TxCounter' are not equal, waiting for CanInterface to send previous messages.
	
)DINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>