<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_CanHeader" Id="{690be47b-7591-4aa0-a4e6-87a8298e5ec8}">
    <Declaration><![CDATA[TYPE ST_CanHeader :
STRUCT
	nCobid: DWORD; // User level Cobid, use functions to handle bit mapping to CAN interface process data.
	bExtendedAddress: BOOL;// does nothing with 11bit version. Incorrectly 'cleared' does not cause errors and is automatically fixed.
	bRTR: BOOL; // Remote transmission request
	nMsgLength: UINT; // number of bytes in CAN message, values 0-8
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>