<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_CanMsg" Id="{e471c9e7-96f6-42c9-a066-e36a332d598d}">
    <Declaration><![CDATA[TYPE ST_CanMsg :
STRUCT
	CanHeader: ST_CanHeader; // User level CAN header information.
	CanData: ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>