<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_RxQueue" Id="{0589376a-5660-088a-06cd-412bf8036e7d}">
    <Declaration><![CDATA[{attribute 'hide'} 
TYPE U_RxQueue :
UNION
	pRxQueue_11bit 						: POINTER TO ST_RxCanQueue_11bit;
	pRxQueue_29bit 						: POINTER TO ST_RxCanQueue_29bit;
	pRxQueue_29bit_nTrans 				: POINTER TO ST_RxCanQueue_29bit_nTrans;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>